# jwoff2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  com_typoface_jwoff2_WOFF2.h  jwoff2.cc
cmake/: FindWOFF2Dec.cmake  FindWOFF2Enc.cmake
src/java/com/typoface/jwoff2/: Main.java  WOFF2.java
